# lazy-hsa

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  GUIDE.md  LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_provider.md
.github/workflows/: ci.yml  claude-code-review.yml
config/: config.example.yaml
docs/: index.html
src/: __init__.py  pipeline.py
src/extractors/: __init__.py  amazon_hsa_scraper.py  gmail_extractor.py
src/processors/: __init__.py  llm_extractor.py
src/scanner/: __init__.py
src/storage/: __init__.py  gdrive_client.py  sheet_client.py
src/watchers/: inbox_watcher.py
tasks/: lessons.md
tests/: __init__.py  conftest.py  test_inbox_watcher.py  test_llm_extractor.py  test_sheet_client.py
