[project]
name = "lazy-hsa"
version = "1.1.1"
description = "Privacy-first, local AI-powered HSA receipt organization system"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["hsa", "receipts", "medical", "tax", "finance", "ollama", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]

dependencies = [
    # Google APIs
    "google-auth>=2.36.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.150.0",
    "gspread>=6.1.0",
    # LLM client (OpenAI-compatible API for Ollama/vLLM)
    "openai>=1.50.0",
    # Email
    "imapclient>=3.0.0",
    "email-validator>=2.2.0",
    # Image/PDF handling
    "Pillow>=11.0.0",
    "pdf2image>=1.17.0",
    "pypdf>=6.6.0",  # Security: fix malformed PDF DoS
    # Web scraping for portals (future)
    "playwright>=1.49.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    # Utilities
    "pyyaml>=6.0",
    "python-dateutil>=2.9.0",
    "rich>=13.9.0",
    "click>=8.1.0",
    "watchdog>=6.0.0",
    # Data handling
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "pillow-heif>=1.1.1",
    "pdfplumber>=0.11.9",
    # Security: explicit version constraints for transitive dependencies
    "urllib3>=2.6.3",  # Fix decompression bomb bypass
    "pyasn1>=0.6.2",   # Fix DoS in decoder
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
lazy-hsa = "src.pipeline:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
